adjusted-repo-controller